proofread sec:resunc

--- a/draft.tex
+++ b/draft.tex
@@ -275,19 +275,19 @@ When $W_B$ is low enough, the non-negativity constraint binds for all three legi
 \subsection{Varying Uncertainty across Legislators}
 \label{sec:resunc}
 
-The results of Section~\ref{sec:resB} in which bribed legislators have their ideal points `leveled' so that their positions gross of bribes are equalized evidently hinge on the symmetry in uncertainty assumed there. The results become more interesting and more realistic if we allow for asymmetry in the uncertainty surrounding legislators' ideal points.
+The results of Section~\ref{sec:resB} in which bribed legislators have their ideal points `leveled' so that their positions gross of bribes are equalized hinge on assumption that the uncertainty surrounding the ideal points of each legislator is the same. The results become more interesting and more realistic if we allow for asymmetry in the uncertainty surrounding legislators' ideal points.
 
 \begin{proposition}
   When there is no bias in the positions of the legislators ($\al =0$), the bribes of legislators whose ideal points are at the median in terms of uncertainty receive the highest relative bribes. [conjecture]
 	\label{prop:asym}
 \end{proposition}
-In numerical examples, this pattern holds strongly. By `relative,' we mean that the bribes are scaled up relative to the equal gross position that occurs when uncertainty is symmetric. We also see that the bribes for legislators whose ideal points are more uncertain are scaled down while the bribes of legislators whose ideal points are less uncertain are scaled up, modulo relative position. That is, there is some effect of being more friendly versus less friendly, as the cumulative density that the legislator will vote in the vote buyer's favor changes in opposite directions when uncertainty rises depending on whether the legislator is friendly or unfriendly. This accords well with the finding in Figure \ref{fig:g1} that those legislators with very low and very high uncertainty gets the lowest payments, while those with more average levels of uncertainty receive the most.
+In numerical examples, this pattern holds strongly. By `relative,' we mean that the bribes are scaled up relative to the bribe profile that creates equal gross position when uncertainty is symmetric. We also see that the bribes for legislators whose ideal points are more uncertain are scaled down while the bribes of legislators whose ideal points are less uncertain are scaled up, modulo relative position. That is, there is some effect of being more friendly versus less friendly, as the cumulative density that the legislator will vote in the vote buyer's favor changes in opposite directions when uncertainty rises depending on whether the legislator is friendly or unfriendly (cfr Section~\ref{sec:uncert}). This accords well with the finding in Figure \ref{fig:g1} that those legislators with very low and very high uncertainty get the lowest payments, while those with more average levels of uncertainty receive the most.
 
-We demonstrate via the following numerical example. Let the bias parameter $\al=0$ and ignore Vote Buyer A. When we increase the scale parameter $s_{.5}$ for the legislator at $0.5$---that is, the least friendly to Vote Buyer $B$---from 1 to 1.5, $B$ stops bribing the most friendly legislator altogether. Vote Buyer $B$ does better in welfare terms because the probability that this legislator votes in his favor shifts upward. In fact, For $s_{.5}$ must be much closer to $1$ in order for $B$ to bribe this legislator, and when he does, the gross ideal point is smaller in absolute value than that for the other two legislators.
+We demonstrate via the following numerical example. Let there be no bias on average in the un-bribed positions of the legislators (i.e. set the bias parameter at $\al=0$) and ignore Vote Buyer A. When we increase the scale parameter $s_{.5}$ for the legislator at $0.5$---that is, the least friendly to Vote Buyer $B$---from 1 to 1.5, $B$ stops bribing the most friendly legislator altogether. Vote Buyer $B$ does better in welfare terms because the probability that this legislator votes in his favor shifts upward. In fact, $s_{.5}$ must be much closer to $1$ in order for $B$ to bribe this legislator, and when he does, the gross ideal point is smaller in absolute value than that for the other two legislators.
 
-On the other hand, if $s_{.5}$ is reduced from 1 to $0.75$, for an intermediate range of $W_B$, the willingness to pay parameter, $B$ switches to \textit{only} bribing legislator $0.5$. As $W_B$ increases, eventually all three legislators are bribed again, but now this legislator receives a larger gross bribe.
+On the other hand, if $s_{.5}$ is reduced from 1 to $0.75$, for an intermediate range of the willingness to pay parameter $W_B$, Vote Buyer $B$ switches to \textit{only} bribing legislator $0.5$. As $W_B$ increases, eventually all three legislators are bribed again, but now this legislator receives a larger gross bribe.
 
-Recall that the effects are not necessarily entirely symmetric for the two extreme legislators because increasing uncertainty has an opposite effect on how much probability mass is above or below zero. However, there are strong similarities here. As $s_{-.5}$ is increased from 1 to 1.5 or larger, $B$ stops bribing this most friendly legislator and the asymmetry has to be reduced to below 1.2 in order for him to resume bribing legislator $-0.5$. When he does so, he will move this legislator less than the other two with lower uncertainty. If we instead reduce $-0.5$'s uncertainty, he moves him further
+Recall that the effects are not necessarily entirely symmetric for the two extreme legislators because increasing uncertainty has an opposite effect on how much probability mass is above or below zero. However, there are strong similarities here. As $s_{-.5}$ is increased from 1 to 1.5 or larger, $B$ stops bribing this most friendly legislator and the asymmetry has to be reduced to below 1.2 in order for him to resume bribing legislator $-0.5$. When he does so, he will move this legislator less than the other two legislators about whom there is less uncertainty. If we instead reduce $-0.5$'s uncertainty, Vote Buyer $B$ moves this legislator further than the other two.
 		
 		
 \subsection{Two Vote Buyers}		
