add roadmap to end of sec:lit

--- a/draft.tex
+++ b/draft.tex
@@ -100,7 +100,7 @@ Also related is Le Breton and Salanie (2003), which studies lobbying when the lo
 
 As noted above, Saiegh (2009) argues that the uncertainty surrounding statutory lawmaking is in part related to governmental and political structure. Although they do not discuss uncertainty specifically, the cross-country empirical work of Gawande, Krishna and Olarreaga (2009) is the first to our knowledge that suggests that this kind of uncertainty plays a role in trade policy. They show that variables such as the number of checks and balances on the power of the legislature and the gap between the policy positions of the main political parties have predictive power for the PFS ``welfare-mindedness'' parameter. The model of Buzard (2016) indicates that the kind of political uncertainty modeled here can have an important impact on the formation and maintenance of trade agreements.
 
-%I will begin by ... Section~\ref{sec:main} then ... In Section~ \ref{sec:example}, ... Section~\ref{sec:dis} explores .... Several extensions of the model are explored in Section~\ref{sec:ext} and Section~\ref{sec:concl} concludes.
+I will introduce the structural model in Section~\ref{sec:model} and discuss the theoretical results in Section~ \ref{sec:res}. Section~\ref{sec:est} discusses the estimation approach while Section~\ref{sec:house} applies this approach to the case of the U.S. House of Representatives. Section~\ref{sec:concl} concludes.
 
 
 \section{The Model}
