--- a/draft.tex
+++ b/draft.tex
@@ -73,7 +73,9 @@ bookmarksopen=true]{hyperref}
 \section{Introduction}
 \label{sec:intro}
 
-In democratic countries, legislatures are the authoritative source of statutory law. This paper seeks to understand how uncertainty affects the incentives for lobbying and the associated prospects for the passage of legislation. Saiegh (2011) identifies two major factors that shape lawmaking: whether buying legislative votes is a feasible option and the unpredictability of legislators' voting behavior. The source of the uncertainty is the existence of cross-pressured legislators: in deciding how to vote, lawmakers consider a variety of influences, including their personal values, announced positions, the views of their constituents, and the preferences of their party leadership. Therefore, legislators' voting behavior can seldom be perfectly anticipated.
+In the United States alone, nearly $4$ billion dollars is spent every year on lobbying and campaign contributions. Looking at the U.S. Congress, for instance, we see that special interest groups exert these economically significant amounts of effort and resources to influence a legislative process that is fraught with uncertainty. In particular, legislators' voting behavior can seldom be perfectly anticipated, as lawmakers consider a variety of influences when deciding how to vote, including their personal values, announced positions, the views of their constituents, and the preferences of their party leadership.
+
+Saiegh (2011) identifies two major factors that shape lawmaking: whether buying legislative votes is a feasible option and the unpredictability of legislators' voting behavior. When vote buying is possible and legislative uncertainty is present---as is often the case---the optimal lobbying strategies are far from obvious. This paper seeks to understand how uncertainty surrounding the preferences of legislators affects the incentives for lobbying and the associated prospects for the passage of legislation. 
 
 We solve a model of vote buying in which there is uncertainty about the ideological positions of legislators with information about this uncertainty symmetric among all players. This model is able to describe some realistic aspects of lobbying and voting behavior: for instance, it predicts that lobbyists on both sides of an issue may be active at the same time, that moderate legislators and those about which there is average uncertainty receive more bribes than those that are ideologically extreme, and that ideal points gross of bribes need not be equalized. We find support for these predictions in U.S. House of Representatives roll call data, from which we estimate ideal points using a logistic item response model.
 
