finish rewriting intro

--- a/draft.tex
+++ b/draft.tex
@@ -77,19 +77,19 @@ In the United States alone, nearly $4$ billion dollars is spent every year on lo
 
 Saiegh (2011) identifies two major factors that shape lawmaking: whether buying legislative votes is a feasible option and the unpredictability of legislators' voting behavior. When vote buying is possible and legislative uncertainty is present---as is often the case---the optimal lobbying strategies are far from obvious. This paper seeks to understand how uncertainty surrounding the preferences of legislators affects the incentives for lobbying and the associated prospects for the passage of legislation. 
 
-We solve a model of vote buying in which there is uncertainty about the ideological positions of legislators with information about this uncertainty symmetric among all players. This model is able to describe some realistic aspects of lobbying and voting behavior: for instance, it predicts that lobbyists on both sides of an issue may be active at the same time, that moderate legislators and those about which there is average uncertainty receive more bribes than those that are ideologically extreme, and that ideal points gross of bribes need not be equalized. We find support for these predictions in U.S. House of Representatives roll call data, from which we estimate ideal points using a logistic item response model.
+We solve a model of vote buying in which there is uncertainty about the ideological positions of legislators. This model is able to describe some realistic aspects of lobbying and voting behavior: for instance, it predicts that lobbyists on both sides of an issue may be active at the same time, that moderate legislators and those about which there is average uncertainty receive more bribes than those that are ideologically extreme, and that ideal points gross of bribes need not be equalized. We find support for these predictions in U.S. House of Representatives roll call data, from which we estimate ideal points using a logistic item response model.
 
 In constructing the model, we follow Groseclose and Snyder (1996) and Banks (2000) in taking a policy proposal as given and studying the behavior of interest groups who may lobby legislators in an attempt to sway the outcome of the vote. In order to keep the model tractable, we study a three-person legislature in which two lobbyists---one for the new proposal and one against it---sequentially offer payments to the legislators.
 
-A payment to a legislator has the effect of shifting the legislator's ideal point, which we take to be known up to the mean and variance parameters of a given probability distribution. Thus bribing a legislator has the effect of changing the probability with which the legislator votes in the manner the vote buyer prefers. In this environment, the optimal vote-buying strategies are not immediately obvious.
+A payment to a legislator has the effect of shifting the legislator's ideal point, which we take to be known up to the mean and variance parameters of a given probability distribution. We assume that information about the legislators' ideal points is symmetric among all players; the legislators are not strategic and there is no motive for signalling. Bribing a legislator only has the effect of changing the probability with which the legislator votes in the manner the vote buyer prefers.
 
-We find that the number of legislators a vote buyer chooses to lobby is increasing in the value he places on the policy. When a vote buyer's willingness-to-pay for his preferred policy is very low, he will bribe none of the legislators; if it is very high, he will bribe all of them. Buying one or two votes is also possible.
+When the lobbyists are faced with this uncertainty about the preferences of the legislators, we find, quite intuitively, that the number of legislators a vote buyer chooses to lobby is increasing in the value he places on the policy. When a vote buyer's willingness-to-pay for his preferred policy is very low, he will bribe none of the legislators; if it is very high, he will bribe all of them. Intermediate outcomes are also possible.
 
 Perhaps more interesting, and in contrast to results in a model without uncertainty, when only one or two legislators are bribed the legislator who remains unbribed is often the one who is most ideologically-aligned with the vote buyer. When the legislators are roughly unbiased on average, it is the moderate legislator who is bribed first. This corresponds well with the data that shows that more moderate legislators receive more campaign contributions.
 
-If uncertainty is taken to be the same for the ideal points of all the legislators, we find that the vote buyers use `leveling strategies' as in Groseclose and Snyder (1996) and Banks (2000). Allowing for asymmetric levels of uncertainty, on the other hand, provides a more realistic picture that accords well with our empirical findings that legislators with moderate levels of uncertainty are the target of the highest levels of lobbying, while those about whom there are very high levels of uncertainty most often remain unbribed.
+If we assume identical levels of uncertainty about the ideal points of all the legislators, we find that the vote buyers use `leveling strategies' as in Groseclose and Snyder (1996) and Banks (2000). Allowing for asymmetric levels of uncertainty, on the other hand, provides a more realistic picture that accords well with our empirical findings that legislators with moderate levels of uncertainty are the target of the highest levels of lobbying, while those about whom there are very high levels of uncertainty most often remain unbribed.
 
-We find one more result that is appealing from an empirical point of view. In this model, it is possible to have both vote buyers paying positive bribes on the same issue. Because the results of the model accord well with these important patterns in the data, we believe this model will contribute to the understanding of the political uncertainty that surrounds statutory lawmaking.
+We find one more result that is appealing from an empirical point of view. In models of vote buying that do not incorporate uncertainty, only one vote buyer will pay bribes on any given issue. In this model with uncertainty about legislators' ideal points, however, it is possible to have both vote buyers paying positive bribes on the same issue. The results of the model accord well with these important patterns in the data, and we believe this model makes an important contribution to the understanding of the political uncertainty that surrounds statutory lawmaking. It both brings more realism to the studying of legislative voting and vote buying \textit{and} gives us a window into an important, under-studied facet of the legislative environment.
 
 Below we introduce an innovative methodology for quantifying cross-industry political uncertainty; the model under consideration here is being adapted as a means to properly identify political uncertainty in this context. We plan to establish the relevance of the resulting measures for policy-making and will make the data available for future use in a wide range of applications.
 
